--- a/index.html
+++ b/index.html
@@ -2,23 +2,32 @@
 <html>
     <head>
         <title>PortFolio Lucas Simpol-Augeray</title>
-        <meta charset="utf-8"/>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css"/>
+        <meta>
     </head>
     <body>
-           <div Class="titre">
-                <div class="titre_photo">
-                    <img src="./image/test.jpg " alt="Image de Lucas Simpol-Augeray" height="100" width="100"> <!--a changer en fonction de l'image-->
-                </div>
-                <div class="titre_texte">
-                    Lucas Simpol-Augeray    
-                </div>
-           </div> 
-           <div class="bar_nav_rapide">
-                <table><tr> test </tr> <tr> test1</tr><tr>  test"</tr><tr> test4</tr></table>
-           </div>
-
-
-
+        <div Class="titre" id="titre">
+            <div class="titre_photo">
+                <img src="./image/test.jpg " alt="Image de Lucas Simpol-Augeray" height="150" width="150"> <!--a changer en fonction de l'image-->
+            </div>
+            <div class="titre_texte">
+                Lucas Simpol-Augeray
+            </div>
+        </div>
+        <div class="bar_nav_rapide">
+            <table>
+                <tr> <a href="#a_propo_de_moi" class="barnav_elem barnav_elem_left_bordered">a propo de moi</a> </tr>
+                <tr> <a href="#mes_competance" class="barnav_elem">mes competance</a> </tr>
+                <tr> <a href="#mon_parcoure" class="barnav_elem">mon parcoure</a> </tr>
+                <tr> <a href="#me_contacte" class="barnav_elem barnav_elem_right_bordered">me contacte</a> </tr>
+            </table>
+        </div>
+        <div id="a_propo_de_moi" class="a_propo_de_moi"></div>
+        <div id="mes_competance" class="mes_competance"></div>
+        <div id="mon_parcoure" class="mon_parcoure"></div>
+        <div id="me_contacte" class="me_contacte"></div>
     </body>
 </html>
