--- a/index.html
+++ b/index.html
@@ -25,9 +25,27 @@
                 <tr> <a href="#me_contacte" class="barnav_elem barnav_elem_right_bordered">me contacte</a> </tr>
             </table>
         </div>
-        <div id="a_propo_de_moi" class="a_propo_de_moi"></div>
-        <div id="mes_competance" class="mes_competance"></div>
-        <div id="mon_parcoure" class="mon_parcoure"></div>
-        <div id="me_contacte" class="me_contacte"></div>
+        <div id="a_propo_de_moi" class="a_propo_de_moi">
+            <div class="text_about_myself"> 
+                en construction
+            </div>
+        </div>
+
+        <div id="mes_competance" class="mes_competance">
+            <div class="text_about_my_skills"> 
+                en construction 
+            </div>
+        </div>
+        
+        <div id="mon_parcoure" class="mon_parcoure">
+            <div class="text_on_my_route"> 
+                en construction 
+            </div>
+        </div>
+        <div id="me_contacte" class="me_contacte">
+            <div class="contact_me"> 
+                en construction
+            </div>
+        </div>
     </body>
 </html>
