--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </div>
         <div class="bar_nav_rapide">
             <table>
-                <tr> <a href="#a_propo_de_moi" class="barnav_elem barnav_elem_left_bordered">a propo de moi</a> </tr>
-                <tr> <a href="#mes_competance" class="barnav_elem">mes competance</a> </tr>
-                <tr> <a href="#mon_parcoure" class="barnav_elem">mon parcoure</a> </tr>
-                <tr> <a href="#me_contacte" class="barnav_elem barnav_elem_right_bordered">me contacte</a> </tr>
+                <tr> <a href="#a_propos_de_moi" class="barnav_elem barnav_elem_left_bordered">a propos de moi</a> </tr>
+                <tr> <a href="#mes_competence" class="barnav_elem">mes compétence</a> </tr>
+                <tr> <a href="#mon_parcours" class="barnav_elem">mon parcours</a> </tr>
+                <tr> <a href="#me_contacte" class="barnav_elem barnav_elem_right_bordered">me contacter</a> </tr>
             </table>
         </div>
         <div id="a_propo_de_moi" class="a_propo_de_moi">
