--- a/index.html
+++ b/index.html
@@ -31,16 +31,35 @@
             </div>
         </div>
 
-        <div id="mes_competance" class="mes_competance">
+        <div id="mes_competence" class="mes_competence">
             <div class="text_about_my_skills"> 
                 en construction 
             </div>
         </div>
         
-        <div id="mon_parcoure" class="mon_parcoure">
+        <div id="mon_parcours" class="mon_parcours">
             <div class="text_on_my_route"> 
-                en construction 
+                en construction
             </div>
+            <table class="tab_parcours" align="center">
+                <tr>
+                  <th class="style_tab_tête" width="30%">Ma Formation</th>
+                  <th width="30%"></th>
+                  <th class="style_tab_tête" width="30%">Mon Parcours professionnel </th>
+                </tr>
+                <th class="tab_parcours_espace"></th>
+                <tr>
+                  <td class="style_tab" width="30%">en construction3</td>
+                  <th width="30%"></th>
+                  <td class="style_tab" width="30%">en construction4</td>
+                </tr>
+                <th class="tab_parcours_espace"></th>
+                <tr>
+                  <td class="style_tab" width="30%">en construction5</td>
+                  <th width="30%"></th>
+                  <td class="style_tab" width="30%">en construction6</td>
+                </tr>
+              </table>
         </div>
         <div id="me_contacte" class="me_contacte">
             <div class="contact_me"> 
