--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div Class="titre" id="titre">
             <div class="titre_photo">
-                <img src="./image/test.jpg " alt="Image de Lucas Simpol-Augeray" height="150" width="150"> <!--a changer en fonction de l'image-->
+                <img src="./image/test.jpg " alt="Image de Lucas Simpol-Augeray" height="200" width="200"> <!--a changer en fonction de l'image-->
             </div>
             <div class="titre_texte">
                 Lucas Simpol-Augeray
@@ -39,32 +39,43 @@
         
         <div id="mon_parcours" class="mon_parcours">
             <div class="text_on_my_route"> 
-                en construction
+                mon parcours
             </div>
-            <table class="tab_parcours" align="center">
-                <tr>
-                  <th class="style_tab_tête" width="30%">Ma Formation</th>
-                  <th width="30%"></th>
-                  <th class="style_tab_tête" width="30%">Mon Parcours professionnel </th>
-                </tr>
-                <th class="tab_parcours_espace"></th>
-                <tr>
-                  <td class="style_tab" width="30%">en construction3</td>
-                  <th width="30%"></th>
-                  <td class="style_tab" width="30%">en construction4</td>
-                </tr>
-                <th class="tab_parcours_espace"></th>
-                <tr>
-                  <td class="style_tab" width="30%">en construction5</td>
-                  <th width="30%"></th>
-                  <td class="style_tab" width="30%">en construction6</td>
-                </tr>
-              </table>
+            <!-- block qui permet de faire un tableaux avec mon parcour profésionnel et ma formation-->
+            <div align="center">
+                <table class="tab_parcours" >
+                    <tr>
+                        <th class="style_tab_tête">Ma Formation</th>
+                        <th width="15%"></th>
+                        <th class="style_tab_tête">Mon Parcours professionnel </th>
+                    </tr>
+                    <th class="tab_parcours_espace"></th>
+                    <tr><!-- ligne 1 de mon parcours-->
+                        <td class="style_tab , tooltip"><div>depuis 2022 : Bachelor Universitaire de <br> Technologie  a <a href="https://www.iutbeziers.fr/"> IUT Beziers</a><span class="tooltiptext">durant ma formation a l'IUT Beziers, je vais passé Bachelor Universitaire de Technologie en Réseaux et Télécommunication.</span></div> </td>
+                        <th width="15%"></th>
+                        <td class="style_tab , tooltip"><div>2017 - 2020 : Arbitre de foot<span class="tooltiptext">durant ses trois ans, j'ai arbitré plusieurs   en construction</span></div> </td>
+                    </tr>
+                    <th class="tab_parcours_espace"></th>
+                    <tr>  <!-- ligne 2 de mon parcours-->
+                        <td class="style_tab , tooltip"><div>2021 - 2022 : Préparation Militaire Marine <br> Jean Moulin Beziers<span class="tooltiptext">en construction</span></div> </td>
+                        <th width="15%"></th>
+                        <!-- <td class="style_tab , tooltip"><div>en construction<span class="tooltiptext">en construction  en construction  en construction  en construction</span></div> </td> -->
+                    </tr>
+                    <th class="tab_parcours_espace"></th>
+                    <tr><!-- ligne 3 de mon parcours-->
+                        <td class="style_tab , tooltip"><div>2019 - 2022 : baccalauréat général <br> au <a href="https://jean-moulin-beziers.mon-ent-occitanie.fr/">lycée Jean Moulin Beziers</a> <span class="tooltiptext">durant c'est 3 ans au lycée j'ai passé mon baccalauréat général avec comme spécialité Science de l'ingénieur et Numérique et science de li'nformatique et l'option Mathématique Complémentaire</span></div></td>
+                        <th width="15%"></th>
+                        <!-- <td class="style_tab , tooltip"><div>en construction<span class="tooltiptext">en construction  en construction  en construction  en construction</span></div> </td> -->
+                    </tr>
+                </table>
+            <!-- fin de block de presentation de ma formation-->
+            </div> 
         </div>
         <div id="me_contacte" class="me_contacte">
             <div class="contact_me"> 
                 en construction
             </div>
         </div>
+
     </body>
 </html>
