Balises HTML netoyées + CSS

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="titre_photo">
                 <img src="./image/test.jpg " alt="Image de Lucas Simpol-Augeray" height="200" width="200"> <!--a changer en fonction de l'image-->
             </div>
-            <div class="titre_texte">
+            <header class="titre_texte">
                 Lucas Simpol-Augeray
-            </div>
+            </header>
         </div>
         <div class="bar_nav_rapide">
             <table>
@@ -41,7 +41,7 @@
             <div class="text_on_my_route"> 
                 mon parcours
             </div>
-            <!-- block qui permet de faire un tableaux avec mon parcour profésionnel et ma formation-->
+            <!-- block qui permet de faire un tableaux avec mon parcour professionnel et ma formation-->
             <div align="center">
                 <table class="tab_parcours" >
                     <tr>
@@ -51,20 +51,31 @@
                     </tr>
                     <th class="tab_parcours_espace"></th>
                     <tr><!-- ligne 1 de mon parcours-->
-                        <td class="style_tab , tooltip"><div>depuis 2022 : Bachelor Universitaire de <br> Technologie  a <a href="https://www.iutbeziers.fr/"> IUT Beziers</a><span class="tooltiptext">durant ma formation a l'IUT Beziers, je vais passé Bachelor Universitaire de Technologie en Réseaux et Télécommunication.</span></div> </td>
-                        <th width="15%"></th>
-                        <td class="style_tab , tooltip"><div>2017 - 2020 : Arbitre de foot<span class="tooltiptext">durant ses trois ans, j'ai arbitré plusieurs   en construction</span></div> </td>
+                        <td class="style_tab tooltip">
+                            <div>depuis 2022 : Bachelor Universitaire de Technologie  a l'<a href="https://www.iutbeziers.fr/">IUT Beziers</a>
+                                <span class="tooltiptext">durant ma formation a l'IUT Beziers, je vais passer Bachelor Universitaire de Technologie en Réseaux et Télécommunications.</span>
+                            </div>
+                        </td>
+                        <td class="style_tab tooltip">
+                            <div>2017 - 2020 : Arbitre de foot
+                                <span class="tooltiptext">durant ses trois ans, j'ai arbitré plusieurs   en construction</span>
+                            </div>
+                        </td>
                     </tr>
-                    <th class="tab_parcours_espace"></th>
                     <tr>  <!-- ligne 2 de mon parcours-->
-                        <td class="style_tab , tooltip"><div>2021 - 2022 : Préparation Militaire Marine <br> Jean Moulin Beziers<span class="tooltiptext">en construction</span></div> </td>
-                        <th width="15%"></th>
+                        <td class="style_tab tooltip">
+                            <div>2021 - 2022 : Préparation Militaire Marine Jean Moulin Beziers
+                                <span class="tooltiptext">en construction</span>
+                            </div>
+                        </td>
                         <!-- <td class="style_tab , tooltip"><div>en construction<span class="tooltiptext">en construction  en construction  en construction  en construction</span></div> </td> -->
                     </tr>
-                    <th class="tab_parcours_espace"></th>
                     <tr><!-- ligne 3 de mon parcours-->
-                        <td class="style_tab , tooltip"><div>2019 - 2022 : baccalauréat général <br> au <a href="https://jean-moulin-beziers.mon-ent-occitanie.fr/">lycée Jean Moulin Beziers</a> <span class="tooltiptext">durant c'est 3 ans au lycée j'ai passé mon baccalauréat général avec comme spécialité Science de l'ingénieur et Numérique et science de li'nformatique et l'option Mathématique Complémentaire</span></div></td>
-                        <th width="15%"></th>
+                        <td class="style_tab tooltip">
+                            <div>2019 - 2022 : baccalauréat général au <a href="https://jean-moulin-beziers.mon-ent-occitanie.fr/">lycée Jean Moulin Beziers</a>
+                                <span class="tooltiptext">durant c'est 3 ans au lycée j'ai passé mon baccalauréat général avec comme spécialité Science de l'ingénieur et Numérique et science de li'nformatique et l'option Mathématique Complémentaire</span>
+                            </div>
+                        </td>
                         <!-- <td class="style_tab , tooltip"><div>en construction<span class="tooltiptext">en construction  en construction  en construction  en construction</span></div> </td> -->
                     </tr>
                 </table>
