raparation tableau mon-parcours : colone mal placé

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                         <th width="15%"></th>
                         <th class="style_tab_tête">Mon Parcours professionnel </th>
                     </tr>
-                    <th class="tab_parcours_espace"></th>
                     <tr><!-- ligne 1 de mon parcours-->
                         <td class="style_tab tooltip">
                             <div>depuis 2022 : Bachelor Universitaire de Technologie  a l'<a href="https://www.iutbeziers.fr/">IUT Beziers</a>
-                                <span class="tooltiptext">durant ma formation a l'IUT Beziers, je vais passer Bachelor Universitaire de Technologie en Réseaux et Télécommunications.</span>
+                                <span class="tooltiptext">durant ma formation a l'IUT Beziers, je vais passer mon Bachelor Universitaire de Technologie en Réseaux et Télécommunications.</span>
                             </div>
                         </td>
+                        <td></td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
                         <td class="style_tab tooltip">
                             <div>2017 - 2020 : Arbitre de foot
                                 <span class="tooltiptext">durant ses trois ans, j'ai arbitré plusieurs   en construction</span>
@@ -67,7 +67,8 @@
                             <div>2021 - 2022 : Préparation Militaire Marine Jean Moulin Beziers
                                 <span class="tooltiptext">en construction</span>
                             </div>
-                        </td>
+                        </td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
+                        <td></td>
                         <!-- <td class="style_tab , tooltip"><div>en construction<span class="tooltiptext">en construction  en construction  en construction  en construction</span></div> </td> -->
                     </tr>
                     <tr><!-- ligne 3 de mon parcours-->
@@ -75,7 +76,8 @@
                             <div>2019 - 2022 : baccalauréat général au <a href="https://jean-moulin-beziers.mon-ent-occitanie.fr/">lycée Jean Moulin Beziers</a>
                                 <span class="tooltiptext">durant c'est 3 ans au lycée j'ai passé mon baccalauréat général avec comme spécialité Science de l'ingénieur et Numérique et science de li'nformatique et l'option Mathématique Complémentaire</span>
                             </div>
-                        </td>
+                        </td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
+                        <td></td>
                         <!-- <td class="style_tab , tooltip"><div>en construction<span class="tooltiptext">en construction  en construction  en construction  en construction</span></div> </td> -->
                     </tr>
                 </table>
