--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta>
     </head>
     <body>
+        <div class="avertisement"> <h1> attention toujours en construction</h1> </div> <!-- na pas vocation a resté-->
         <div Class="titre" id="titre">
             <div class="titre_photo">
                 <img src="./image/test.jpg " alt="Image de Lucas Simpol-Augeray" height="200" width="200"> <!--a changer en fonction de l'image-->
@@ -22,16 +23,20 @@
                 <tr> <a href="#a_propos_de_moi" class="barnav_elem barnav_elem_left_bordered">a propos de moi</a> </tr>
                 <tr> <a href="#mes_competence" class="barnav_elem">mes compétence</a> </tr>
                 <tr> <a href="#mon_parcours" class="barnav_elem">mon parcours</a> </tr>
+                <tr> <a href="#mes_projet" class="barnav_elem">mes projet</a> </tr>
                 <tr> <a href="#me_contacte" class="barnav_elem barnav_elem_right_bordered">me contacter</a> </tr>
             </table>
         </div>
-        <div id="a_propo_de_moi" class="a_propo_de_moi">
-            <div class="text_about_myself"> 
-                en construction
+        <div id="a_propo_de_moi">
+            <div class="text_about_myself" width="10%"> 
+
+                <!-- a voir pour mettre un présentation -->
+                Je suis actuellement en cours d'obtention Bachelor Universitaire de Technologie au sein de <a href="https://www.iutbeziers.fr/">l'IUT de Béziers.</a> Interessé depuis toujours dans 
+                l'informatique principalement dans le domaine des communication, je souhaite continuer dans cette voie pour me spécialiser dans ce domaine.
             </div>
         </div>
 
-        <div id="mes_competence" class="mes_competence">
+        <div id="mes_competence">
             <div class="text_about_my_skills"> 
                 en construction 
             </div>
@@ -51,40 +56,53 @@
                     </tr>
                     <tr><!-- ligne 1 de mon parcours-->
                         <td class="style_tab tooltip">
-                            <div>depuis 2022 : Bachelor Universitaire de Technologie  a l'<a href="https://www.iutbeziers.fr/">IUT Beziers</a>
+                            <div>depuis 2022 : Bachelor Universitaire de Technologie a l<a href="https://www.iutbeziers.fr/">'IUT Beziers</a>
                                 <span class="tooltiptext">durant ma formation a l'IUT Beziers, je vais passer mon Bachelor Universitaire de Technologie en Réseaux et Télécommunications.</span>
                             </div>
                         </td>
                         <td></td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
                         <td class="style_tab tooltip">
                             <div>2017 - 2020 : Arbitre de foot
-                                <span class="tooltiptext">durant ses trois ans, j'ai arbitré plusieurs   en construction</span>
-                            </div>
+                                <span class="tooltiptext">Durant ses trois ans, j'ai arbitré plusieurs dans différente catégorie (U13, U15, U16). Les matchs sont plus en moin compliqué arbitré en fonction des
+                                    différente équipe et ne jamais se fiée au a priori ou au on dit. Durant c'est trois j'ai du m'adapter au différente situation qui mon permit d'évoluer.</span>
+                            </div>  <!-- a voir pour avoir la même taille que les autre vus que c'est qu'un ligne
+                        -->
                         </td>
                     </tr>
                     <tr>  <!-- ligne 2 de mon parcours-->
                         <td class="style_tab tooltip">
                             <div>2021 - 2022 : Préparation Militaire Marine Jean Moulin Beziers
-                                <span class="tooltiptext">en construction</span>
+                                <span class="tooltiptext">Durant c'est Préparation Militaire Marine, j'ai apprit la rigeur militaire, les principe de base de la Marine grace a différent cour que j'ai reçu. Avec 
+                                    les sorti faite j'ai pus visité différents installation et batiment.</span>
                             </div>
                         </td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
                         <td></td>
                         <!-- <td class="style_tab , tooltip"><div>en construction<span class="tooltiptext">en construction  en construction  en construction  en construction</span></div> </td> -->
+                        <!-- ligne ajout pour la suite-->
                     </tr>
                     <tr><!-- ligne 3 de mon parcours-->
                         <td class="style_tab tooltip">
                             <div>2019 - 2022 : baccalauréat général au <a href="https://jean-moulin-beziers.mon-ent-occitanie.fr/">lycée Jean Moulin Beziers</a>
-                                <span class="tooltiptext">durant c'est 3 ans au lycée j'ai passé mon baccalauréat général avec comme spécialité Science de l'ingénieur et Numérique et science de li'nformatique et l'option Mathématique Complémentaire</span>
+                                <span class="tooltiptext">durant c'est 3 ans au lycée j'ai passé mon baccalauréat général avec comme spécialité Science de l'ingénieur et Numérique et science de li'nformatique et
+                                    l'option Mathématique Complémentaire</span>
                             </div>
                         </td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
                         <td></td>
                         <!-- <td class="style_tab , tooltip"><div>en construction<span class="tooltiptext">en construction  en construction  en construction  en construction</span></div> </td> -->
+                        <!-- ligne ajout pour la suite-->
                     </tr>
                 </table>
             <!-- fin de block de presentation de ma formation-->
             </div> 
         </div>
-        <div id="me_contacte" class="me_contacte">
+        
+        <div id="mes_projet">
+            <div class="text_about_my_project"> 
+                en construction 
+            </div>
+        </div>
+
+        <div id="me_contacte">
             <div class="contact_me"> 
                 en construction
             </div>
