Correction ortographique et grammaticale

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <div class="bar_nav_rapide">
             <table>
                 <tr> <a href="#a_propos_de_moi" class="barnav_elem barnav_elem_left_bordered">a propos de moi</a> </tr>
-                <tr> <a href="#mes_competence" class="barnav_elem">mes compétence</a> </tr>
+                <tr> <a href="#mes_competence" class="barnav_elem">mes compétences</a> </tr>
                 <tr> <a href="#mon_parcours" class="barnav_elem">mon parcours</a> </tr>
-                <tr> <a href="#mes_projet" class="barnav_elem">mes projet</a> </tr>
+                <tr> <a href="#mes_projet" class="barnav_elem">mes projets</a> </tr>
                 <tr> <a href="#me_contacte" class="barnav_elem barnav_elem_right_bordered">me contacter</a> </tr>
             </table>
         </div>
         <div id="a_propo_de_moi">
             <div class="text_about_myself" width="10%"> 
-                originaire du nord <i>(59)</i> je vie actuellement dans l'Héraut <i>(34)</i><br><br>
+                Originaire du nord <i>(59)</i> je vie actuellement dans l'Héraut <i>(34)</i><br><br>
                 
-                Je suis actuellement en cours d'obtention Bachelor Universitaire de Technologie au sein de <a href="https://www.iutbeziers.fr/">l'IUT de Béziers.</a> Interessé depuis toujours dans 
-                l'informatique principalement dans le domaine des communication, je souhaite continuer dans cette voie pour me spécialiser dans ce domaine.
+                Je suis actuellement en cours d'obtention d'un Bachelor Universitaire de Technologie au sein de <a href="https://www.iutbeziers.fr/">l'IUT de Béziers.</a>
+                Intéressé depuis toujours dans l'informatique principalement dans le domaine des communications, je souhaite continuer dans cette voie pour me spécialiser dans ce domaine.
                 <!-- toujour en cour de travail-->
             </div>
         </div>
@@ -64,17 +64,16 @@
                         <td></td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
                         <td class="style_tab tooltip">
                             <div>2017 - 2020 : Arbitre de foot
-                                <span class="tooltiptext">Durant ses trois ans, j'ai arbitré plusieurs dans différente catégorie (U13, U15, U16). Les matchs sont plus en moin compliqué arbitré en fonction des
-                                    différente équipe et ne jamais se fiée au a priori ou au on dit. Durant c'est trois j'ai du m'adapter au différente situation qui mon permit d'évoluer.</span>
-                            </div>  <!-- a voir pour avoir la même taille que les autre vus que c'est qu'un ligne
-                        -->
+                                <span class="tooltiptext">Durant ces trois ans, j'ai arbitré plusieurs matchs dans différentes catégories (U13, U15, U16). Les matchs sont plus ou moins compliqués à arbitrer en fonction des
+                                    différentes équipes et il ne faut jamais se fier aux à prioris ou aux on-dits. Durant ces trois ans j'ai dû m'adapter aux différentes situations qui m'ont permit d'évoluer.</span>
+                            </div>  <!-- a voir pour avoir la même taille que les autre vus que c'est qu'un ligne     -->
                         </td>
                     </tr>
                     <tr>  <!-- ligne 2 de mon parcours-->
                         <td class="style_tab tooltip">
                             <div>2021 - 2022 : Préparation Militaire Marine Jean Moulin Beziers
-                                <span class="tooltiptext">Durant c'est Préparation Militaire Marine, j'ai apprit la rigeur militaire, les principe de base de la Marine grace a différent cour que j'ai reçu. Avec 
-                                    les sorti faite j'ai pus visité différents installation et batiment.</span>
+                                <span class="tooltiptext">Durant cette Préparation Militaire Marine, j'ai appris la rigeur militaire, les principes de base de la Marine grâce a différents cours que j'ai reçu.
+                                    Avec les sorties faites, j'ai pu visiter différentes installations et batîments.</span>
                             </div>
                         </td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
                         <td></td>
@@ -84,7 +83,7 @@
                     <tr><!-- ligne 3 de mon parcours-->
                         <td class="style_tab tooltip">
                             <div>2019 - 2022 : baccalauréat général au <a href="https://jean-moulin-beziers.mon-ent-occitanie.fr/">lycée Jean Moulin Beziers</a>
-                                <span class="tooltiptext">durant c'est 3 ans au lycée j'ai passé mon baccalauréat général avec comme spécialité Science de l'ingénieur et Numérique et science de li'nformatique et
+                                <span class="tooltiptext">Durant ces 3 ans au lycée, j'ai passé mon baccalauréat général avec comme spécialité Science de l'ingénieur et Numérique et Science de l'innformatique et
                                     l'option Mathématique Complémentaire</span>
                             </div>
                         </td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
@@ -98,23 +97,25 @@
         </div>
             <div id="mes_projet" class="my_project">
                 <div class="Project_title"> 
-                    Mes projet
+                    Mes projets
                 </div>
                 <!-- block qui permet de faire un tableaux avec mon parcour professionnel et ma formation-->
                 <div align="center">
                     <table class="tab_parcours" >
                         <tr>
-                            <th class="style_tab_tête">Mes projet durant ma formation</th>
+                            <th class="style_tab_tête">Mes projets durant ma formation</th>
                             <th width="15%"></th>
-                            <th class="style_tab_tête">mes projet professionnel</th>
+                            <th class="style_tab_tête">Mes projets professionels</th>
                         </tr> 
                         <tr><!-- ligne 1 de mes projet-->
                             <td>
                                 <div class="Project_Name">
-                                    Mon PortFolio de présentation
+                                    Mon Portfolio de présentation
                                 </div>
                                 <div class="text_for_the_presentation_of_my_project">
-                                    Mon PortFolio de présentation a été réalisé dans le cadre d'un mise en situation d'apprentissage et d'évaluation <i>(SAE)</i>, qui a pour debut de nous présenté sur internet. Se projet et été réalisé principalement en HTML <i>(HyperText Markup Language)</i> et en CSS <i>(Cascading Style Sheets)</i>
+                                    Mon Portfolio de présentation a été réalisé dans le cadre d'une mise en situation d'apprentissage et d'évaluation <i>(SAE)</i>
+                                    qui avait pour objectif de nous présenter sur internet. Ce projet a été réalisé principalement en HTML <i>(HyperText Markup Language)</i>
+                                    et en CSS <i>(Cascading Style Sheets)</i>
                                 </div>
                             </td>
                             <td></td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
