Mise à  jour du CSS (unicode + code consistent)

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <div class="bar_nav_rapide">
             <table>
                 <tr> <a href="#a_propos_de_moi" class="barnav_elem barnav_elem_left_bordered">a propos de moi</a> </tr>
-                <tr> <a href="#mes_competence" class="barnav_elem">mes compétences</a> </tr>
+                <tr> <a href="#mes_competences" class="barnav_elem">mes compétences</a> </tr>
                 <tr> <a href="#mon_parcours" class="barnav_elem">mon parcours</a> </tr>
-                <tr> <a href="#mes_projet" class="barnav_elem">mes projets</a> </tr>
-                <tr> <a href="#me_contacte" class="barnav_elem barnav_elem_right_bordered">me contacter</a> </tr>
+                <tr> <a href="#mes_projets" class="barnav_elem">mes projets</a> </tr>
+                <tr> <a href="#me_contacter" class="barnav_elem barnav_elem_right_bordered">me contacter</a> </tr>
             </table>
         </div>
-        <div id="a_propo_de_moi">
+        <div id="a_propos_de_moi">
             <div class="text_about_myself" width="10%"> 
                 Originaire du nord <i>(59)</i> je vie actuellement dans l'Héraut <i>(34)</i><br><br>
                 
@@ -37,13 +37,13 @@
             </div>
         </div>
 
-        <div id="mes_competence">
+        <div id="mes_competences">
             <div class="text_about_my_skills"> 
                 en construction 
             </div>
         </div>
         
-        <div id="mon_parcours" class="mon_parcours">
+        <div id="mon_parcours">
             <div class="my_route_title"> 
                 mon parcours
             </div>
@@ -51,9 +51,9 @@
             <div align="center">
                 <table class="tab_parcours" >
                     <tr>
-                        <th class="style_tab_tête">Ma Formation</th>
+                        <th class="style_tab_tete">Ma Formation</th>
                         <th width="15%"></th>
-                        <th class="style_tab_tête">Mon Parcours professionnel </th>
+                        <th class="style_tab_tete">Mon Parcours professionnel </th>
                     </tr>
                     <tr><!-- ligne 1 de mon parcours-->
                         <td class="style_tab tooltip">
@@ -95,21 +95,21 @@
             <!-- fin de block de presentation de ma formation-->
             </div> 
         </div>
-            <div id="mes_projet" class="my_project">
-                <div class="Project_title"> 
+            <div id="mes_projets">
+                <div class="project_title"> 
                     Mes projets
                 </div>
                 <!-- block qui permet de faire un tableaux avec mon parcour professionnel et ma formation-->
                 <div align="center">
                     <table class="tab_parcours" >
                         <tr>
-                            <th class="style_tab_tête">Mes projets durant ma formation</th>
+                            <th class="style_tab_tete">Mes projets durant ma formation</th>
                             <th width="15%"></th>
-                            <th class="style_tab_tête">Mes projets professionels</th>
+                            <th class="style_tab_tete">Mes projets professionels</th>
                         </tr> 
                         <tr><!-- ligne 1 de mes projet-->
                             <td>
-                                <div class="Project_Name">
+                                <div class="project_name">
                                     Mon Portfolio de présentation
                                 </div>
                                 <div class="text_for_the_presentation_of_my_project">
@@ -120,7 +120,7 @@
                             </td>
                             <td></td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
                             <td>
-                                <div class="Project_Name">
+                                <div class="project_name">
                                     arrivé dans le futur
                                 </div>
                             </td>
@@ -131,7 +131,7 @@
             </div>
         </div>
 
-        <div id="me_contacte">
+        <div id="me_contacter">
             <div class="contact_me"> 
                 en construction
             </div>
