ajout de la bar de nav stiki

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <main id="content">
             <div id="a_propos_de_moi">
                 <div class="text_about_myself" width="10%"> 
-                    Originaire du nord <i>(59)</i> je vie actuellement dans l'Héraut <i>(34)</i><br><br>
+                    Originaire de Normandie <i>(76)</i> je vie actuellement dans l'Héraut <i>(34)</i><br><br>
                     
                     Je suis actuellement en cours d'obtention d'un Bachelor Universitaire de Technologie au sein de <a href="https://www.iutbeziers.fr/">l'IUT de Béziers.</a>
                     Intéressé depuis toujours dans l'informatique principalement dans le domaine des communications, je souhaite continuer dans cette voie pour me spécialiser dans ce domaine.
@@ -58,7 +58,7 @@
                         </tr>
                         <tr><!-- ligne 1 de mon parcours-->
                             <td class="style_tab tooltip">
-                                <div>depuis 2022 : Bachelor Universitaire de Technologie a l<a href="https://www.iutbeziers.fr/">'IUT Beziers</a>
+                                <div>depuis 2022 : <a href="https://www.iutbeziers.fr/">Bachelor Universitaire de Technologie a l'IUT Beziers</a>
                                     <span class="tooltiptext">durant ma formation a l'IUT Beziers, je vais passer mon Bachelor Universitaire de Technologie en Réseaux et Télécommunications.</span>
                                 </div>
                             </td>
@@ -83,7 +83,7 @@
                         </tr>
                         <tr><!-- ligne 3 de mon parcours-->
                             <td class="style_tab tooltip">
-                                <div>2019 - 2022 : baccalauréat général au <a href="https://jean-moulin-beziers.mon-ent-occitanie.fr/">lycée Jean Moulin Beziers</a>
+                                <div>2019 - 2022 : <a href="https://jean-moulin-beziers.mon-ent-occitanie.fr/">baccalauréat général au lycée Jean Moulin Beziers</a>
                                     <span class="tooltiptext">Durant ces 3 ans au lycée, j'ai passé mon baccalauréat général avec comme spécialité Science de l'ingénieur et Numérique et Science de l'innformatique et
                                         l'option Mathématique Complémentaire</span>
                                 </div>
