--- a/index.html
+++ b/index.html
@@ -96,39 +96,43 @@
                 <!-- fin de block de presentation de ma formation-->
                 </div> 
             </div>
-                <div id="mes_projets">
-                    <div class="project_title"> 
-                        Mes projets
-                    </div>
-                    <!-- block qui permet de faire un tableaux avec mon parcour professionnel et ma formation-->
-                    <div align="center">
-                        <table class="tab_parcours" >
-                            <tr>
-                                <th class="style_tab_tete">Mes projets durant ma formation</th>
-                                <th width="15%"></th>
-                                <th class="style_tab_tete">Mes projets professionels</th>
-                            </tr> 
-                            <tr><!-- ligne 1 de mes projet-->
-                                <td>
-                                    <div class="project_name">
-                                        Mon Portfolio de présentation
-                                    </div>
-                                    <div class="text_for_the_presentation_of_my_project">
-                                        Mon Portfolio de présentation a été réalisé dans le cadre d'une mise en situation d'apprentissage et d'évaluation <i>(SAE)</i>
-                                        qui avait pour objectif de nous présenter sur internet. Ce projet a été réalisé principalement en HTML <i>(HyperText Markup Language)</i>
-                                        et en CSS <i>(Cascading Style Sheets)</i>
-                                    </div>
-                                </td>
-                                <td></td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
-                                <td>
-                                    <div class="project_name">
-                                        arrivé dans le futur
-                                    </div>
-                                </td>
-                            </tr>       
-                        </table>
+            <div id="my_projets">
+                <div class="project_title"> 
+                    Mes projets
+                </div>
+                <!-- block qui permet de faire un tableau avec mon parcours professionnel et ma formation-->
+                <div align="center">
+                    <table class="tab_parcours" >
+                        <tr>
+                            <th class="style_tab_tete">Mes projets durant ma formation</th>
+                            <th width="15%"></th>
+                            <th class="style_tab_tete">Mes projets professionels</th>
+                        </tr> 
+                        <tr><!-- ligne 1 de mes projet-->
+                            <td>
+                                <div class="project_name">
+                                    Mon Portfolio de présentation
+                                </div>
+                                <div class="text_for_the_presentation_of_my_project">
+                                    Mon Portfolio de présentation a été réalisé dans le cadre d'une mise en situation d'apprentissage et d'évaluation <i>(SAE)</i>
+                                    qui avait pour objectif de nous présenter sur internet. Ce projet a été réalisé principalement en HTML <i>(HyperText Markup Language)</i>
+                                    et en CSS <i>(Cascading Style Sheets)</i><br>
+                                                    <img src="image/image_html.jpg" height="200" width="200" >
+                                                    <img src="image/image_css.jpg" height="200" width="200" >
+
+
+                                    
+                                </div>
+                            </td>
+                            <td></td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
+                            <td>
+                                <div class="project_name">
+                                    arrivé dans le futur
+                                </div>
+                            </td>
+                        </tr>       
+                    </table>
                         <!-- fin de block de presentation de mes projet-->
-                    </div>
                 </div>
             </div>
 
