rectif taille image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <tr> <a href="#a_propos_de_moi" class="barnav_elem barnav_elem_left_bordered">a propos de moi</a> </tr>
                 <tr> <a href="#mes_competences" class="barnav_elem">mes compétences</a> </tr>
                 <tr> <a href="#mon_parcours" class="barnav_elem">mon parcours</a> </tr>
-                <tr> <a href="#mes_projets" class="barnav_elem">mes projets</a> </tr>
+                <tr> <a href="#my_projets" class="barnav_elem">mes projets</a> </tr>
                 <tr> <a href="#me_contacter" class="barnav_elem barnav_elem_right_bordered">me contacter</a> </tr>
             </table>
         </div>
