add contact me + img

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             
             <div id="mon_parcours">
-                <div class="my_route_title"> 
+                <div class="part_title"> 
                     mon parcours
                 </div>
                 <!-- block qui permet de faire un tableaux avec mon parcour professionnel et ma formation-->
@@ -97,7 +97,7 @@
                 </div> 
             </div>
             <div id="my_projets">
-                <div class="project_title"> 
+                <div class="part_title"> 
                     Mes projets
                 </div>
                 <!-- block qui permet de faire un tableau avec mon parcours professionnel et ma formation-->
@@ -122,7 +122,6 @@
                                             <div class="mySlides fade">
                                                 <img src="image/image_css.png" style="width:75%">
                                             </div>
-
                                             <div class="mySlides fade">
                                                 <img src="image/image_html.png" style="width:75%">
                                             </div>
@@ -146,10 +145,27 @@
                 </div>
             </div>
 
-            <div id="me_contacter">
-                <div class="contact_me"> 
-                    en construction
+            <div id="contact_me" align="center">
+                <div class="part_title">
+                    Me contacter
                 </div>
+                    <table class="contact_me">
+                        <td width="33%">
+                            <a href="mailto:simpollucas@gmail.com" target="_blank" title="Mail : simpollucas@gmail.com" alt="www.gmail.com">
+                                <img src="image/Logo_Gmail" width="15%">
+                            </a>
+                        </td>
+                        <td width="33%">
+                            <a href="https://www.linkedin.com/in/lucas-simpol-augeray-117780256/" target="_blank" title="Lucas Simpol-Augeray" alt="www.linkedin.com">
+                                <img src="image/Logo_Linkedin.png" width="20%">
+                            </a>
+                        </td>
+                        <td width="33%">
+                            <a href="https://discord.com/users/257275538601672724" target="_blank" title="discord : lucas vador (H.T.T.P.S)#3148" alt="www.discord.com">
+                                <img src="image/Logo_Discord.png" width="15%">
+                            </a>
+                        </td>
+                    </table>
             </div>
         </main>
     </body>
